@@ -1,3 +1,8 @@
+2013-07-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* fix title of orphaned node windows
+	* don't update content of sticky node windows
+
 2013-05-17  Hendrik Tews <prooftree@askra.de>
 
 	* release version 0.12 on 2013-05-17 13:39:12 UTC
